<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    app:startDestination="@+id/profileScreen">

    <fragment
        android:id="@+id/profileScreen"
        android:name="com.thewyp.daggerpractice.ui.main.profile.ProfileFragment"
        android:label="@string/fragment_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/todoScreen"
        android:name="com.thewyp.daggerpractice.ui.main.todos.TodoFragment"
        android:label="@string/fragment_todo"
        tools:layout="@layout/fragment_todos" />

    <fragment
        android:id="@+id/postsScreen"
        android:name="com.thewyp.daggerpractice.ui.main.posts.PostsFragment"
        android:label="@string/fragment_posts"
        tools:layout="@layout/fragment_posts" >
        <action
            android:id="@+id/action_postsScreen_to_commentFragment"
            app:destination="@id/commentFragment" />
    </fragment>
    <fragment
        android:id="@+id/photosScreen"
        android:name="com.thewyp.daggerpractice.ui.main.photo.PhotoFragment"
        android:label="@string/fragment_photos"
        tools:layout="@layout/fragment_photos" />
    <fragment
        android:id="@+id/commentFragment"
        android:name="com.thewyp.daggerpractice.ui.main.comment.CommentFragment"
        android:label="@string/fragment_comment"
        tools:layout="@layout/fragment_comment" >
        <action
            android:id="@+id/action_commentFragment_to_postsScreen"
            app:destination="@id/postsScreen" />
    </fragment>

</navigation>